Add parameters for code quality to project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,10 @@ testpaths = [
     "tests",
     "integration"
 ]
+
+[tool.flake8]
+exclude = [".venv", "build"]
+max-line-lenght = 79
+
+[tool.black]
+line-length = 79
