Configure black and isort

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
         run: pip install '.[test]'
       - name: Look for style errors
         run: pflake8
+      - name: Check for importing style
+        run: isort --profile=black --check --diff dundie tests integration
+      - name: Look for auto format errors
+        run: black --check --diff dundie tests integration
 
   tests:
     needs: lint
